--- a/src/components/Navigation/_nav.scss
+++ b/src/components/Navigation/_nav.scss
@@ -9,7 +9,7 @@
   top: 0;
   left: 0;
   z-index: 1;
-  padding: 0.5rem 0rem;
+  padding-bottom: 0.5rem;
 }
 
 .logo {
